objects/Call_Report__c.object
<CustomObject>
    <fields>
        <fullName>Relationship_Segment__c</fullName>
        <formula>TEXT(Related_Group_Client__r.Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Group Client Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Only Relationship Groups or Prospect Relationships can be related to a Call Report</inlineHelpText>
        <label>Relationship</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 OR 5) AND 2) OR ((3 OR 5) AND 4) OR ((5 OR 6) AND 7)</booleanFilter>
            <errorMessage>Call Reports can only be recorded against a Relationship Group or Prospects</errorMessage>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Barclays Standard User, ABSA META User,User, Standard User ( Lightning ), Banking User (Custom), Standard User (Banking - Private), Standard User ( Lightning ), Standard User (Markets), Standard User (Research), ,Standard User (WIMI), Standard User (RoA)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Relationship Group, Prospect</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Barclays Wealth Advisor, Standard User (Wealth Advisory)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client - Individual, Client - Legal Entity, Prospect - Individual, Prospect - Legal Entity, Relationship Group, Client, Prospect, Client - Individual, Client - Legal Entity, Prospect - Individual, Prospect - Legal Entity</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Barclays Private Side User,Barclays Administrator, Delegated Admins, System Administrator, Barclays Business Owner, Standard User ( Private Lightning )</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Standard User (WIMI), Standard User (Retail Distribution)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>EDC Client,</value>
            </filterItems>
            <infoMessage>Call Reports can only be recorded against a Relationship Group</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sensitivities__c</fullName>
        <label>Sensitivities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Share_C_R_with_Relationship_Owner__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Ensure the check box is unticked if you do not want to share the call report with the client owner.</inlineHelpText>
        <label>Share C.R. with Relationship Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_With_Markets_Institu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked share record with ZAF - CIB - Markets - Institutions role</description>
        <label>Share With Markets Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coverage Banker</fullName>
                </value>
                <value>
                    <fullName>Coverage Leadership</fullName>
                </value>
                <value>
                    <fullName>CSM</fullName>
                </value>
                <value>
                    <fullName>Other (Analyst, Business Manager, etc.)</fullName>
                </value>
                <value>
                    <fullName>Product Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Role_v2__c</fullName>
        <label>Team Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Topics_Client_Would_Like_to_Cover__c</fullName>
        <inlineHelpText>If the client does have specific topics to cover with MR or would like MR’s views on an issue, provide key messages that MR should convey in the ‘Key Messages’ section above</inlineHelpText>
        <label>Topics client would like to cover</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Travel_KMs__c</fullName>
        <label>Travel (KMs)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absa Conference</fullName>
                </value>
                <value>
                    <fullName>Absa Product Launch</fullName>
                </value>
                <value>
                    <fullName>Breakfast Meeting</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Corporate Access</fullName>
                </value>
                <value>
                    <fullName>Dinner Meeting</fullName>
                </value>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>Field Trip</fullName>
                </value>
                <value>
                    <fullName>Industry Event</fullName>
                </value>
                <value>
                    <fullName>Lunch Meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Roadshow</fullName>
                </value>
                <value>
                    <fullName>Telephonic</fullName>
                </value>
                <value>
                    <fullName>Video Meeting</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UK_Barclays_CR_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UK Barclays CR ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Call Report</label>
    <listViews>
        <fullName>Attended_this_year_My_Team</fullName>
        <columns>NAME</columns>
        <columns>Relationship__c</columns>
        <columns>Subject__c</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Meeting_Reason__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meeting_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Call reports - CY (I have access to)</label>
    </listViews>
    <listViews>
        <fullName>My_Call_Reports_owned_by_me</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Relationship__c</columns>
        <columns>Type__c</columns>
        <columns>Meeting_Reason2__c</columns>
        <columns>Subject__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Call Reports (owned by me)</label>
    </listViews>
    <listViews>
        <fullName>RAISS_Team_s_Call_Reports</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Meeting_Reason__c</columns>
        <columns>Relationship__c</columns>
        <columns>Accountable_Banker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Call_Report__c.RAISS_Call_Report</value>
        </filters>
        <label>RAISS Team&apos;s Call Reports</label>
    </listViews>
    <listViews>
        <fullName>Research_Team_s_Call_Reports</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Relationship__c</columns>
        <columns>Accountable_Banker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Call_Report__c.Research_Call_Report</value>
        </filters>
        <label>Research Team&apos;s Call Reports</label>
    </listViews>
    <listViews>
        <fullName>WEF_List</fullName>
        <columns>NAME</columns>
        <columns>Relationship__c</columns>
        <columns>Subject__c</columns>
        <columns>Client_Plan__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>startsWith</operation>
            <value>WEF 2019</value>
        </filters>
        <filters>
            <field>Meeting_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2019</value>
        </filters>
        <label>2019 WEF Call Reports List</label>
    </listViews>
    <listViews>
        <fullName>X7_All_Call_Reports_My_Team</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Meeting_Reason__c</columns>
        <columns>Relationship__c</columns>
        <columns>Related_Group_Client__c</columns>
        <columns>Subject__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
            <value>X</value>
        </filters>
        <label>All Call Reports (I have access to)</label>
    </listViews>
    <nameField>
        <displayFormat>CR{000000}</displayFormat>
        <label>Call Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Reports</pluralLabel>
    <recordTypes>
        <fullName>Banking_Call_Report</fullName>
        <active>true</active>
        <label>Banking Call Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>EDC_Call_Report</fullName>
        <active>true</active>
        <description>EDC Call Reports</description>
        <label>EDC - Call Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Markets_Call_Report</fullName>
        <active>true</active>
        <label>Markets - Call Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>RAISS_Call_Report</fullName>
        <active>true</active>
        <description>Absa Risk Analytics, Indexation &amp; Structured Solutions</description>
        <label>META - Call Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Research_Call_Report</fullName>
        <active>true</active>
        <label>Research Call Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Call_Report</fullName>
        <active>true</active>
        <description>Absa Standard User, Private Side user, Business Owner</description>
        <label>Standard Call Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>WIMI</fullName>
        <active>true</active>
        <description>Wimi teams</description>
        <label>WIMI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wealth_Call_Report</fullName>
        <active>true</active>
        <description>Call reports record type for Wealth users</description>
        <label>Wealth - Call Report</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Analysts__c</fullName>
        <label>Analysts</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Banker__c</fullName>
        <label>Banker</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>CSM__c</fullName>
        <label>CSM</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Legal_Compliance__c</fullName>
        <label>Legal/Compliance</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>PA__c</fullName>
        <label>PA</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Product_Sales__c</fullName>
        <label>Product Sales</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Relationship_Owner__c</fullName>
        <label>Relationship Owner</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Team_Lead__c</fullName>
        <label>Team Lead</label>
    </sharingReasons>
    <validationRules>
        <fullName>ProposedProd_reqd_if_New_or_Exst_Facilty</fullName>
        <active>true</active>
        <description>Field : Proposed Product is mandatory if Call Report Meeting Reason is New or Exisiting Facility/Solution</description>
        <errorConditionFormula>(ISPICKVAL (Meeting_Reason2__c, &quot;New Facility / Opportunity&quot;) 
||
ISPICKVAL (Meeting_Reason2__c, &quot;Existing Facility / Opportunity&quot;) )
&amp;&amp; 
ISBLANK(Proposed_Products__c)
&amp;&amp;
NOT(ISCHANGED(I_have_attended__c))</errorConditionFormula>
        <errorDisplayField>Proposed_Products__c</errorDisplayField>
        <errorMessage>Please select Proposed Product/s</errorMessage>
    </validationRules>
</CustomObject>